<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculadora</string>
    
    <string name="borrar">Borrar</string>
    <string name="acerca">Acerca de</string>
    
    <string name="boton0">0</string>
    <string name="boton1">1</string>
    <string name="boton2">2</string>
    <string name="boton3">3</string>
    <string name="boton4">4</string>
    <string name="boton5">5</string>
    <string name="boton6">6</string>
    <string name="boton7">7</string>
    <string name="boton8">8</string>
    <string name="boton9">9</string>
    <string name="boton.">.</string>
    <string name="botonIgu">=</string>
    <string name="botonSum">+</string>
    <string name="botonMul">*</string>
    <string name="botonDiv">/</string>
    <string name="botonRes">-</string>
    
    <string name="cabeceraAcercaDe">Acerca de...</string>
    <string name="acercaDeLayaut">Desarrollo avanzado de\naplicaciones Android.
El curso ofrece al alumno una\n visión avanzada en el\ndesarrollo de aplicaciones
para terminales móviles con el\nsistema operativo Android,\nincrementando los
conocimientos básicos\nadquiridos en nuestro primer\ncurso "Desarrollo de
aplicaciones Android".</string>
    <string name="atras">Regresa a la calculadora</string>
    
</resources>