<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#000000" >

    <TextView
        android:id="@+id/pantallaArriba"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="10"
        android:gravity="right"
        android:text=""
        android:textColor="#ffffff"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/pantallaMedio"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="10"
        android:gravity="right"
        android:text=""
        android:textColor="#ffffff"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/pantallaAbajo"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="10"
        android:gravity="right"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" />
    
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="3" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/boton7"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="@string/boton7" />
            
            <Button
                android:id="@+id/boton8"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="@string/boton8" />
            
            <Button
                android:id="@+id/boton9"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="@string/boton9" />
            
            <Button
                android:id="@+id/botonDiv"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="@string/botonDiv" />
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/boton4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="@string/boton4" />
            
            <Button
                android:id="@+id/boton5"
	            android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="@string/boton5" />
            
            <Button
                android:id="@+id/boton6"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="@string/boton6" />
            
            <Button
                android:id="@+id/botonMul"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="@string/botonMul" />
            
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/boton1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="@string/boton1" />
            
            <Button
                android:id="@+id/boton2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="@string/boton2" />
            
            <Button
                android:id="@+id/boton3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="@string/boton3" />
            
            <Button
                android:id="@+id/botonRes"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="@string/botonRes" />
            
        </TableRow>                
        
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/boton."
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="@string/boton." />
            
            <Button
                android:id="@+id/boton0"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="@string/boton0" />
            
            <Button
                android:id="@+id/botonIgu"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="@string/botonIgu" />
            
            <Button
                android:id="@+id/botonSum"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:textSize="30sp"
                android:text="@string/botonSum" />
            
        </TableRow>     
                
    </TableLayout>

</LinearLayout>